# AFdocs

./: .gitignore  .gitmodules  .h.txt.swp  .pre-commit-config.yaml  .prettierrc.yaml  .readthedocs.yml  AfterSubmoduleUpdates.md  CLAUDE.md  GettingHelp.md  LICENSE  README.md  WorkingNotes.md  extract_site_text.py  h.txt  index.html.save  mkdocs.yml  pixi.toml  privacyDisclaimer.md  requirements.txt  ruff.toml
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: deploy.yml  docs.yml  semantic-pr-check.yml
Bench Mark Scripts/: run_EVNT.sh  run_truth3.sh  script_EVNT.sh  script_TRUTH.sh  script_rucio.sh  to_run_centos.sh  to_run_centos_interactive.sh
Benchmark Scripts/: .README.md.swp  README.md  parse_script.py  parsing_plotting_jobs.ipynb
Benchmark Scripts/EVNT/: EVNT.root  SUSY_Radiative_Decays_JO.py  benchmark_EVNT.sub  mc.MGPy8EG_A14N23LO_MET_25_N2_100_N1_97_WB.py  run_EVNT.sh  script_EVNT.sh
Benchmark Scripts/Rucio/: script_rucio.sh
Benchmark Scripts/TRUTH3/: benchmark_TRUTH.sub  run_truth3.sh  script_TRUTH.sh
Tutorial-2019Aug/: README.md
Tutorial-2019Aug/BNL/src/: CMakeLists.txt
UserOnboarding/: README.md
VSCode/: README.md
_layouts/: default.html
css/: main.css
docs/: LICENSE  README.md  faqs_tips.md
docs/bnl/: eos.md  (+9 more)
jupyter/: BNLjupyter.md  JupyterAtTier3s.md  JupyterCoffeaCUChicago.md  JupyterLabUChicago.md  SLACJupyterExtraFuncs.md  SLACjupyter.md  SLACuser_setups.txt  dask.slurm.test.py.txt  pycuda.test.py.txt
scripts/: readMoreOrLess.js
tier3docs/: GettingHelp.md  README.md  getting_help.md  index.html.save  test-sheet.md
(+167 files in other folders)
